<resources>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="serie_id_key" translatable="false">intent_serie_id_key</string>
    <string name="actor_id_key" translatable="false">intent_actor_id_key</string>
    <string name="next_key" translatable="false">show_next_bundle_key</string>
    <string name="season_number_key" translatable="false">season_number_intent_key</string>
    <string name="url_season_key" translatable="false">url_season_image_intent_key</string>
    <string name="episode_id_key" translatable="false">intent_id_episode_key</string>
    <string name="language_key" translatable="false">prefes_language_key</string>
    <string name="prefs_episode_style_key" translatable="false">prefes_episode_key</string>
    <string name="prefs_date_format_key" translatable="false">prefes_date_format_key</string>
    <string name="prefs_special_episode_key" translatable="false">prefes_special_episode_key</string>
    <string name="prefs_notification_key" translatable="false">prefes_notification_key</string>
    <string name="main_activity_notificaiton_key" translatable="false">main_activity_from_notification</string>
    <string name="the_tvdb_api_key" translatable="false">apikey_here</string><!-- -->
    <string name="banner_ad_unit_id" translatable="false">apikey_here</string>

    <string name="app_name">Traxer</string>
    <string name="is_rtl">false</string>

    <!-- Navigation Drawer -->
    <string name="action_settings">Settings</string>
    <string name="collection_nav_label">Collection</string>
    <string name="calendar_nav_label">Calendar</string>
    <string name="missing_nav_label">You missed it?</string>
    <string name="statistics_nav_label">Statistics</string>
    <string name="settings_nav_label">Settings</string>
    <string name="about_nav_label">About</string>
    <string name="share_nav_label">Share</string>
    <string name="other_nav_label">Other</string>
    <string name="next_out_label">Next out</string>
    <string name="share_text">text to share</string>
    <string name="share_title">Share</string>
    <string name="app_description">Track your tv shows</string>

    <!-- Search show -->
    <string name="search_hint">Digit Tv Show</string>
    <string name="search_activity_title">Search Serie</string>
    <string name="search_empty_view_text">NO RESULT</string>
    <string name="add_serie_btn">Add</string>
    <string name="already_add_text">Alredy added</string>

    <!-- Statistics -->
    <string name="total_serie_label">Total TV Shows</string>
    <string name="time_total_label">Time spent watching the episodes</string>
    <string name="hours_label">Hours</string>
    <string name="days_label">Days</string>
    <string name="minutes_label">Minutes</string>
    <string name="total_episode_label">Total episodes</string>
    <string name="statistics_episode_unwatched">Episodes unwatched: %d</string>
    <string name="statistics_episode_watched">Episodes watched: %d</string>

    <!-- Collection -->
    <string name="colelction_serie_empty">No serie</string>

    <!-- Details -->
    <string name="tab_1_title">Next</string>
    <string name="tab_2_title">Info</string>
    <string name="tab_3_title">Seasons</string>
    <string name="tab_4_title">Cast</string>
    <string name="label_rating">Rating</string>
    <string name="label_overview">Overview</string>
    <string name="label_status">Status</string>
    <string name="label_network">Network</string>
    <string name="label_time">Time</string>
    <string name="label_total_season">Total season</string>
    <string name="label_total_episode">Total episodes</string>
    <string name="label_first_aired">First aired</string>
    <string name="label_genre">Genre</string>
    <string name="menu_watch">Set all episode as watch</string>
    <string name="menu_unwatch">Set all episode as unwatch</string>
    <string name="menu_delete">Delete Serie</string>
    <string name="snackbar_all_watch">All episode are watched</string>
    <string name="snackbar_all_unwatch">All episode are unwatched</string>

    <!-- Episodes -->
    <string name="label_no_episodes">No episodes</string>
    <string name="snap_episode_watch">Episode setted as watch</string>
    <string name="snap_episode_unwatch">Episode set as unwatch</string>

    <!-- Settings -->
    <string name="general_category">General</string>
    <string name="default_language">en</string>
    <string name="language_title">Language</string>
    <string name="language_subtitle">Select the language of the contents</string>
    <string name="pref_episode_title">Episode style</string>
    <string name="pref_episode_subtitle">Select the episode number style</string>
    <string name="default_episode_style">S01E01</string>
    <string name="pref_special_episode_title">Episode extra</string>
    <string name="pref_special_episode_subtitle">Include in the count special episodes</string>
    <string name="pref_notification_title">Notification</string>
    <string name="pref_notification_on">Notification enabled</string>
    <string name="pref_notification_off">Notification disabled</string>
    <string name="sync_account_type">traxer.smasini.it</string>
    <string name="content_authority">smasini.it.traxer</string>
    <string name="default_date_format">yyyy-MM-dd</string>
    <string name="date_format_title">Date format</string>
    <string name="date_format_subtitle">Select the date format</string>

    <string name="label_loading">Loading...</string>
    <string name="special_season_name">Extra</string>
    <string name="season_number_name">Season %d</string>

    <!-- Notification -->
    <string name="notification_title">Traxer - Episodes out!</string>
    <string name="notification_message" formatted="false">Today were released %d episodes</string>
    <string name="notification_message_single" formatted="false">Today an episode was released</string>

    <string name="action_share">Share</string>
    <string name="accessibility_add_serie">Add Serie</string>
    <string name="accessibillity_watch_unwatch">Episode watch/unwatch</string>
    <string name="accessibility_episode_photo">episode photo</string>
    <string name="accessibility_actor_photo">actor photo</string>
    <string name="accessibility_serie_photo">serie poster</string>
    <string name="accessibility_season_photo">season poster</string>
    <string name="accessibility_progress">Completed %d percent</string>
    <string name="accessibility_rating">Rating: %.1f of 10</string>
    <string name="next_watch_empty">Nothing to watch</string>

    <!-- Widget -->
    <string name="widget_name">Traxer</string>
    <string name="no_episode_today">No episode today</string>
    <string name="widget_title">Traxer: today coming out</string>
    <string name="appbar_transition">appbar_transition</string>


</resources>
