<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/general_category">
        <ListPreference
            android:defaultValue="@string/default_language"
            android:summary="@string/language_subtitle"
            android:title="@string/language_title"
            android:key="@string/language_key" />
        <ListPreference
            android:defaultValue="@string/default_episode_style"
            android:entries="@array/ep_styles"
            android:entryValues="@array/ep_styles_values"
            android:summary="@string/pref_episode_subtitle"
            android:title="@string/pref_episode_title"
            android:key="@string/prefs_episode_style_key" />
        <ListPreference
            android:defaultValue="@string/default_date_format"
            android:entries="@array/date_format"
            android:entryValues="@array/date_format_values"
            android:summary="@string/date_format_subtitle"
            android:title="@string/date_format_title"
            android:key="@string/prefs_date_format_key" />
        <CheckBoxPreference
            android:key="@string/prefs_special_episode_key"
            android:summary="@string/pref_special_episode_subtitle"
            android:title="@string/pref_special_episode_title" />
        <SwitchPreferenceCompat
            android:key="@string/prefs_notification_key"
            android:summaryOff="@string/pref_notification_off"
            android:summaryOn="@string/pref_notification_on"
            android:title="@string/pref_notification_title" />
    </PreferenceCategory>
</PreferenceScreen>