<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="smasini.it.traxer.app.fragments.InfoDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp">
            <android.support.v7.widget.CardView
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/indigo_300"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_default"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/info_label_size"
                            android:layout_weight="@integer/info_label_weight"
                            android:text="@string/label_status"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="@integer/info_value_weight"
                            android:textSize="@dimen/info_value_size"
                            android:shadowColor="@color/shadow_color"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="2"
                            android:id="@+id/info_serie_status"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/info_label_size"
                            android:layout_weight="@integer/info_label_weight"
                            android:text="@string/label_network"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="@integer/info_value_weight"
                            android:textSize="@dimen/info_value_size"
                            android:shadowColor="@color/shadow_color"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="2"
                            android:id="@+id/info_serie_network"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="1">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/info_label_size"
                            android:layout_weight="@integer/info_label_weight"
                            android:text="@string/label_time"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="@integer/info_value_weight"
                            android:textSize="@dimen/info_value_size"
                            android:shadowColor="@color/shadow_color"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="2"
                            android:id="@+id/info_serie_time"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/info_label_size"
                            android:layout_weight="@integer/info_label_weight"
                            android:text="@string/label_total_season"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="@integer/info_value_weight"
                            android:textSize="@dimen/info_value_size"
                            android:shadowColor="@color/shadow_color"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="2"
                            android:id="@+id/info_serie_tot_season"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/info_label_size"
                            android:layout_weight="@integer/info_label_weight"
                            android:text="@string/label_total_episode"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="@integer/info_value_weight"
                            android:textSize="@dimen/info_value_size"
                            android:shadowColor="@color/shadow_color"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="2"
                            android:id="@+id/info_serie_tot_episode"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/info_label_size"
                            android:layout_weight="@integer/info_label_weight"
                            android:text="@string/label_first_aired"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="@integer/info_value_weight"
                            android:textSize="@dimen/info_value_size"
                            android:shadowColor="@color/shadow_color"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="2"
                            android:id="@+id/info_serie_first_aired"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/info_label_size"
                            android:layout_weight="@integer/info_label_weight"
                            android:text="@string/label_genre"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="@integer/info_value_weight"
                            android:textSize="@dimen/info_value_size"
                            android:shadowColor="@color/shadow_color"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="2"
                            android:id="@+id/info_serie_genre"/>
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/indigo_300"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_default"
                android:layout_marginBottom="@dimen/margin_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_default"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/info_label_size"
                            android:layout_weight="@integer/info_label_weight"
                            android:text="@string/label_rating"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="@integer/info_value_weight"
                            android:textSize="@dimen/info_value_size"
                            android:shadowColor="@color/shadow_color"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="2"
                            android:id="@+id/info_serie_rating"/>
                    </LinearLayout>
                    <HorizontalScrollView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <RatingBar
                                android:layout_width="wrap_content"
                                android:layout_gravity="center"
                                android:layout_height="wrap_content"
                                android:id="@+id/ratingbar"
                                android:isIndicator="true"
                                android:progressDrawable="@drawable/rating_stars"
                                android:stepSize="0.5"
                                android:max="10"
                                android:numStars="@integer/num_stars" />
                        </FrameLayout>
                    </HorizontalScrollView>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardBackgroundColor="@color/indigo_300"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/info_label_size"
                        android:shadowColor="@color/shadow_color"
                        android:shadowDx="2"
                        android:shadowDy="2"
                        android:shadowRadius="2"
                        android:text="@string/label_overview"
                        android:textStyle="bold|italic" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:id="@+id/info_serie_overview"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
